Consistent Prerequisite component

--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -7,7 +7,10 @@ visible_in_sidebar: true
 
 ## API Guide
 
-<p>Once you get the <code>clientID</code> and <code>secret</code> from Setu, use them to generate the token.</p>
+<p>
+    Once you get the <code>clientID</code> and <code>secret</code> from Setu,
+    use them to generate the token.
+</p>
 
 ### Generate Access Token
 
@@ -37,7 +40,8 @@ An API to generate access tokens, which are used to authorise any other API requ
     <tr>
         <th>Header</th>
         <td>
-            <code>client</code>— will be <code>bridge</code><br/>
+            <code>client</code>— will be <code>bridge</code>
+            <br />
             <code>Content-Type</code>— will be <code>application/json</code>
         </td>
     </tr>
@@ -48,7 +52,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 **Request Body**
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
   "clientID": "client_id",
   "secret": "client_secret"
   "grant_type": "client_credentials",
@@ -58,26 +62,29 @@ An API to generate access tokens, which are used to authorise any other API requ
 **Response**
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
   "access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoic3RyaW5nIn0.HfoWXjOPViPG0BWnZ7ZGahD9UXacsjl9vrYXVIHOcW8",
   "refresh_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoicmVmcmVzaF90b2tlbiJ9.67LNOUvWYtrxIELorznd4WUHqvjW3cOG1_dKs1BB9w8"
 }`}
 </CodeBlockWithCopy>
 
 <Callout type="tip">
-💡 <code>access_token</code> is valid for 5 mins.
+    💡 <code>access_token</code> is valid for 5 mins.
 </Callout>
 
 ##### How to use the access token
 
-- Once you have a valid token, you can use it to authorise an API calls made to Setu, by setting the `authorization` request header as `Bearer <token-value>`.
-- Store the `refresh_token` and use it to get the new access token before it expires.
+-   Once you have a valid token, you can use it to authorise an API calls made to Setu, by setting the `authorization` request header as `Bearer <token-value>`.
+-   Store the `refresh_token` and use it to get the new access token before it expires.
 
 <hr class="primary" />
 
 ### Refresh Access Token
 
-<p><strong>Before expiry</strong>, use the stored <code>refresh_token</code> from the previous step to get the new <code>access_token</code>.</p>
+<p>
+    <strong>Before expiry</strong>, use the stored <code>refresh_token</code>{" "}
+    from the previous step to get the new <code>access_token</code>.
+</p>
 
 **Request**
 
@@ -103,7 +110,8 @@ An API to generate access tokens, which are used to authorise any other API requ
     <tr>
         <th>Header</th>
         <td>
-            <code>client</code>— will be <code>bridge</code><br/>
+            <code>client</code>— will be <code>bridge</code>
+            <br />
             <code>Content-Type</code>— will be <code>application/json</code>
         </td>
     </tr>
@@ -114,7 +122,7 @@ An API to generate access tokens, which are used to authorise any other API requ
 **Request Body**
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
   "refresh_token": "string"
 }`}
 </CodeBlockWithCopy>
@@ -122,54 +130,37 @@ An API to generate access tokens, which are used to authorise any other API requ
 **Response**
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
   "access_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoic3RyaW5nIn0.HfoWXjOPViPG0BWnZ7ZGahD9UXacsjl9vrYXVIHOcW8",
   "refresh_token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3NfdG9rZW4iOiJhY2Nlc3NfdG9rZW4iLCJyZWZyZXNoX3Rva2VuIjoicmVmcmVzaF90b2tlbiJ9.67LNOUvWYtrxIELorznd4WUHqvjW3cOG1_dKs1BB9w8"
 }`}
 </CodeBlockWithCopy>
 
 <Callout type="tip">
-💡  <strong>After expiry</strong>, use the <code>Generate Access Token</code> API to get the new token.
+    💡 <strong>After expiry</strong>, use the <code>Generate Access Token</code>{" "}
+    API to get the new token.
 </Callout>
 
 <hr class="primary" />
 
+##### Choose your type of integration
+
 <Row>
     <Portion desktopSpan="half">
-        <Link href="/payments/umap/api-integration/aggregators">
-            <Card padding="micro" shape="rounded">
-                <Text
-                    size="small"
-                    weight="600"
-                    textColor="slate-60"
-                    marginBottom="micro"
-                >
-                    READ NEXT &rarr;
-                </Text>
-                <Text size="large" weight="600" textColor="blue-90">
-                    Aggregators
-                </Text>
-                <Text weight="400">Start integrating with UMAP as an aggregator.</Text>
-            </Card>
-        </Link>
+        <Card padding="small" shape="rounded">
+            <Link href="/payments/umap/api-integration/aggregators">
+                Aggregators
+            </Link>
+            <p>Start integrating as an aggregator</p>
+        </Card>
     </Portion>
     <Portion desktopSpan="half">
-        <Link href="/payments/umap/api-integration/merchants">
-            <Card padding="micro" shape="rounded">
-                <Text
-                    size="small"
-                    weight="600"
-                    textColor="slate-60"
-                    marginBottom="micro"
-                >
-                    READ NEXT &rarr;
-                </Text>
-                <Text size="large" weight="600" textColor="blue-90">
-                    Merchants
-                </Text>
-                <Text weight="400">Start integrating with UMAP as a merchant.</Text>
-            </Card>
-        </Link>
+        <Card padding="small" shape="rounded">
+            <Link href="/payments/umap/api-integration/merchants">
+                Merchants
+            </Link>
+            <p>Start integrating as a merchant</p>
+        </Card>
     </Portion>
 </Row>
 
