--- a/content/payments/umap/mandates/generic/pause.mdx
+++ b/content/payments/umap/mandates/generic/pause.mdx
@@ -7,43 +7,73 @@ visible_in_sidebar: true
 
 ## Pausing a mandate
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates/generic">
-            UPI Autopay Generic Operations ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates/generic">
+        UPI Autopay Generic Operations ↗
+    </a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
 <Callout type="tip">
-                Only customers can pause a UPI mandate from their UPI app and there is no merchant intervention required.
-            </Callout>
-<br/>
-<p>When a customer initiates mandate pause from their UPI app, UMAP will send notifications to the merchant for following events:</p>
+    Only customers can pause a UPI mandate from their UPI app and there is no
+    merchant intervention required.
+</Callout>
+<br />
+<p>
+    When a customer initiates mandate pause from their UPI app, UMAP will send
+    notifications to the merchant for following events:
+</p>
 <ul>
-    <li><b>mandate_operation.pause.initiated</b></li>
-    <li><b>mandate.paused</b> (if mandate pause is successful)</li>
-    <li><b>mandate_operation.pause.success</b> (if mandate pause is successful)</li>
-    <li><b>mandate.live</b> (if mandate pause fails)</li>
-    <li><b>mandate_operation.pause.failed</b> (if mandate pause fails)</li>
+    <li>
+        <b>mandate_operation.pause.initiated</b>
+    </li>
+    <li>
+        <b>mandate.paused</b> (if mandate pause is successful)
+    </li>
+    <li>
+        <b>mandate_operation.pause.success</b> (if mandate pause is successful)
+    </li>
+    <li>
+        <b>mandate.live</b> (if mandate pause fails)
+    </li>
+    <li>
+        <b>mandate_operation.pause.failed</b> (if mandate pause fails)
+    </li>
 </ul>
-<p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate pause operation notifications <a href="/payments/umap/notifications/mandates/pause">here</a></p>
+<p>
+    Read more about mandate status notifications{" "}
+    <a href="/payments/umap/notifications/mandates">here</a> and mandate pause
+    operation notifications{" "}
+    <a href="/payments/umap/notifications/mandates/pause">here</a>
+</p>
 <p>The notifications are depicted in the below diagram</p>
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-customer-pause/update-mandate-customer-pause.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-customer-pause/update-mandate-customer-pause.png"
+    alt="Bridge"
 />
 
-<p>After receiving <b>mandate_operation.pause.initiated</b> notification, the merchant can also use <Link href="/payments/umap/mandates/generic/pause#check-mandate-operation-status">check mandate operation status API</Link> to check if mandate pause is <b>successful</b></p>
+<p>
+    After receiving <b>mandate_operation.pause.initiated</b> notification, the
+    merchant can also use{" "}
+    <Link href="/payments/umap/mandates/generic/pause#check-mandate-operation-status">
+        check mandate operation status API
+    </Link>{" "}
+    to check if mandate pause is <b>successful</b>
+</p>
 
 <Callout type="warning">
-    The only operation that can be performed on a <code>paused</code> mandate is to <code>unpause</code> it. Other operations like <code>pre debit notification</code>, <code>execution</code>, <code>update</code> and <code>revoke</code> are blocked while a mandate is <code>paused</code>
+    The only operation that can be performed on a <code>paused</code> mandate is
+    to <code>unpause</code> it. Other operations like{" "}
+    <code>pre debit notification</code>, <code>execution</code>,{" "}
+    <code>update</code> and <code>revoke</code> are blocked while a mandate is{" "}
+    <code>paused</code>
 </Callout>
 
-<hr class="tertiary"/>
+<hr class="tertiary" />
 
 #### Check mandate operation status (optional)
 
@@ -72,13 +102,14 @@ After receiving pause operation initiated notification, the merchant can use thi
         <tr>
             <th>Header</th>
             <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/umap/api-integration"
-                    target="_blank">
+                <code>merchantId</code>
+                <br />
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+                &gt;. Generate this token using{" "}
+                <a href="/payments/umap/api-integration" target="_blank">
                     OAuth
-                </a>.<br />
+                </a>
+                .<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
@@ -88,7 +119,7 @@ After receiving pause operation initiated notification, the merchant can use thi
 
 <h6>Sample response</h6>
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
   "amountLimit": 1000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "endDate": "02012006",
@@ -106,10 +137,22 @@ After receiving pause operation initiated notification, the merchant can use thi
 </CodeBlockWithCopy>
 <b>In the above response:</b>
 <ul>
-    <li><code>id</code> is a unique ID that is associated with this mandate pause operation and can be used to track it later.</li>
+    <li>
+        <code>id</code> is a unique ID that is associated with this mandate
+        pause operation and can be used to track it later.
+    </li>
 </ul>
 
-<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandateOperationById" target="_blank">here</a>.</p>
+<p>
+    To know more about all the API params, please refer to the API documentation{" "}
+    <a
+        href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandateOperationById"
+        target="_blank"
+    >
+        here
+    </a>
+    .
+</p>
 
 <NextPage
     info={{
