--- a/content/payments/umap/mandates/generic/unpause.mdx
+++ b/content/payments/umap/mandates/generic/unpause.mdx
@@ -7,37 +7,63 @@ visible_in_sidebar: true
 
 ## Unpausing a paused mandate
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates/generic">
-            UPI Autopay Generic Operations ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates/generic">
+        UPI Autopay Generic Operations ↗
+    </a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
 Only the end customer has the option of unpausing a paused UPI mandate from their UPI app and there is no merchant intervention required.
 
-<p>When a customer initiates mandate pause from their UPI app, UMAP will send notifications to the merchant for following events:</p>
+<p>
+    When a customer initiates mandate pause from their UPI app, UMAP will send
+    notifications to the merchant for following events:
+</p>
 <ul>
-    <li><b>mandate_operation.unpause.initiated</b></li>
-    <li><b>mandate.live</b> (if mandate unpause is successful)</li>
-    <li><b>mandate_operation.unpause.success</b> (if mandate unpause is successful)</li>
-    <li><b>mandate.paused</b> (if mandate unpause fails)</li>
-    <li><b>mandate_operation.unpause.failed</b> (if mandate unpause fails)</li>
+    <li>
+        <b>mandate_operation.unpause.initiated</b>
+    </li>
+    <li>
+        <b>mandate.live</b> (if mandate unpause is successful)
+    </li>
+    <li>
+        <b>mandate_operation.unpause.success</b> (if mandate unpause is
+        successful)
+    </li>
+    <li>
+        <b>mandate.paused</b> (if mandate unpause fails)
+    </li>
+    <li>
+        <b>mandate_operation.unpause.failed</b> (if mandate unpause fails)
+    </li>
 </ul>
-<p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate unpause operation notifications <a href="/payments/umap/notifications/mandates/unpause">here</a></p>
+<p>
+    Read more about mandate status notifications{" "}
+    <a href="/payments/umap/notifications/mandates">here</a> and mandate unpause
+    operation notifications{" "}
+    <a href="/payments/umap/notifications/mandates/unpause">here</a>
+</p>
 <p>The notifications are depicted in the below diagram</p>
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-customer-unpause/update-mandate-customer-unpause.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-customer-unpause/update-mandate-customer-unpause.png"
+    alt="Bridge"
 />
 
-<p>After receiving <b>mandate_operation.unpause.initiated</b> notification, the merchant can also use <Link href="/payments/umap/mandates/generic/unpause#check-mandate-operation-status">check mandate operation status API</Link> to check if mandate unpause is <b>successful</b></p>
+<p>
+    After receiving <b>mandate_operation.unpause.initiated</b> notification, the
+    merchant can also use{" "}
+    <Link href="/payments/umap/mandates/generic/unpause#check-mandate-operation-status">
+        check mandate operation status API
+    </Link>{" "}
+    to check if mandate unpause is <b>successful</b>
+</p>
 
-<hr class="tertiary"/>
+<hr class="tertiary" />
 
 #### Check mandate operation status (optional)
 
@@ -66,13 +92,16 @@ After receiving pause operation initiated notification, the merchant can use thi
         <tr>
             <th>Header</th>
             <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
+                <code>merchantId</code>
+                <br />
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+                &gt;. Generate this token using <a
                     href="/payments/umap/api-integration"
-                    target="_blank">
+                    target="_blank"
+                >
                     OAuth
-                </a>.<br />
+                </a>
+                .<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
@@ -82,7 +111,7 @@ After receiving pause operation initiated notification, the merchant can use thi
 
 <h6>Sample response</h6>
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
   "amountLimit": 1000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "endDate": "02012006",
@@ -100,10 +129,22 @@ After receiving pause operation initiated notification, the merchant can use thi
 </CodeBlockWithCopy>
 <b>In the above response:</b>
 <ul>
-    <li><code>id</code> is a unique ID that is associated with this mandate unpause operation and can be used to track it later.</li>
+    <li>
+        <code>id</code> is a unique ID that is associated with this mandate
+        unpause operation and can be used to track it later.
+    </li>
 </ul>
 
-<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandateOperationById" target="_blank">here</a>.</p>
+<p>
+    To know more about all the API params, please refer to the API documentation{" "}
+    <a
+        href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandateOperationById"
+        target="_blank"
+    >
+        here
+    </a>
+    .
+</p>
 
 <NextPage
     info={{
