--- a/content/payments/umap/mandates/otm/check-status.mdx
+++ b/content/payments/umap/mandates/otm/check-status.mdx
@@ -7,15 +7,15 @@ visible_in_sidebar: true
 
 ## Check mandate payment status
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates/otm/execute">
-            Execute Mandate ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates/otm/execute">Execute Mandate ↗</a>
 </Card>
-<br/>
+
+<br />
+
 The merchant can use the **<i>check status API</i>** to check mandate payment status.
 
 <table>
@@ -35,19 +35,22 @@ The merchant can use the **<i>check status API</i>** to check mandate payment st
         <tr>
             <th>Path</th>
             <td>
-                <code>/v1/merchants/payments/product-instances/&#123;mandateId&#125;/last</code>
+                <code>
+                    /v1/merchants/payments/product-instances/&#123;mandateId&#125;/last
+                </code>
             </td>
         </tr>
         <tr>
             <th>Header</th>
             <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/umap/api-integration"
-                    target="_blank">
+                <code>merchantId</code>
+                <br />
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+                &gt;. Generate this token using{" "}
+                <a href="/payments/umap/api-integration" target="_blank">
                     OAuth
-                </a>.<br />
+                </a>
+                .<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
