--- a/content/payments/umap/mandates/otm/pre-debit-notify.mdx
+++ b/content/payments/umap/mandates/otm/pre-debit-notify.mdx
@@ -7,26 +7,29 @@ visible_in_sidebar: true
 
 ## Send a pre debit notification
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates/otm/create">
-            Create one time mandate ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates/otm/create">Create one time mandate ↗</a>
 </Card>
-<br/>
+
+<br />
+
 <Callout type="tip">
-    Pre debit notification is not needed if <code>blockFunds</code> is set as <code>true</code> while creating the mandate.
+    Pre debit notification is not needed if <code>blockFunds</code> is set as{" "}
+    <code>true</code> while creating the mandate.
 </Callout>
-<br/>
+
+<br />
+
 Once the mandate is **LIVE** the merchant needs to send a pre debit notification 48 - 72 Hrs before debit / execution to let the customer be notified of the upcoming debit.
 
 The process for mandate pre debit notification is described in the below diagram:
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-pre-debit-notification/update-mandate-pre-debit-notification.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-pre-debit-notification/update-mandate-pre-debit-notification.png"
+    alt="Bridge"
 />
 
 The merchant will have to call the **<i>send mandate pre debit notification API</i>** with the correct set of parameters.
@@ -54,13 +57,16 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
         <tr>
             <th>Header</th>
             <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
+                <code>merchantId</code>
+                <br />
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+                &gt;. Generate this token using <a
                     href="/payments/umap/api-integration"
-                    target="_blank">
+                    target="_blank"
+                >
                     OAuth
-                </a>.<br />
+                </a>
+                .<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
@@ -80,7 +86,12 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
 }`}
 </CodeBlockWithCopy>
 
-<p><b>Request body parameter values for sending pre debit notification for a one time mandate</b></p>
+<p>
+    <b>
+        Request body parameter values for sending pre debit notification for a
+        one time mandate
+    </b>
+</p>
 <table>
     <tr>
         <th>parameter</th>
@@ -88,11 +99,16 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
     </tr>
     <tr>
         <td>amount</td>
-        <td>must be as per the <code>amountRule</code> and <code>maxAmountLimit</code> configured while creating the mandate</td>
+        <td>
+            must be as per the <code>amountRule</code> and{" "}
+            <code>maxAmountLimit</code> configured while creating the mandate
+        </td>
     </tr>
     <tr>
         <td>executionDate</td>
-        <td>must be <code>48 - 72 Hrs</code> ahead of current time</td>
+        <td>
+            must be <code>48 - 72 Hrs</code> ahead of current time
+        </td>
     </tr>
     <tr>
         <td>sequenceNumber</td>
@@ -100,7 +116,10 @@ The merchant will have to call the **<i>send mandate pre debit notification API<
     </tr>
     <tr>
         <td>umn</td>
-        <td>can be derived from the notifications received by the merchant during mandate creation flow or via check mandate status API</td>
+        <td>
+            can be derived from the notifications received by the merchant
+            during mandate creation flow or via check mandate status API
+        </td>
     </tr>
 </table>
 
@@ -130,16 +149,31 @@ To know more about all the API params, please refer to the API documentation <a 
 
 <p>UMAP will send notifications to the merchant for the following events:</p>
 <ul>
-    <li><b>mandate_operation.notify.success</b> (if mandate pre debit notification is successful)</li>
-    <li><b>mandate_operation.notify.failed</b> (if mandate pre debit notification fails)</li>
+    <li>
+        <b>mandate_operation.notify.success</b> (if mandate pre debit
+        notification is successful)
+    </li>
+    <li>
+        <b>mandate_operation.notify.failed</b> (if mandate pre debit
+        notification fails)
+    </li>
 </ul>
-<p>Read more about mandate pre debit notification operation notifications <a href="/payments/umap/notifications/mandates/notify">here</a></p>
+<p>
+    Read more about mandate pre debit notification operation notifications{" "}
+    <a href="/payments/umap/notifications/mandates/notify">here</a>
+</p>
 
-<p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/otm/pre-debit-notify#check-mandate-pre-debit-notification-status">check mandate pre debit notification status API</Link> to check if pre debit notification is <b>successful</b></p>
+<p>
+    In addition to the notifications, the merchant can also use{" "}
+    <Link href="/payments/umap/mandates/otm/pre-debit-notify#check-mandate-pre-debit-notification-status">
+        check mandate pre debit notification status API
+    </Link>{" "}
+    to check if pre debit notification is <b>successful</b>
+</p>
 
 Please refer to the Document Reference section for checking the API reference and the notifications.
 
-<hr class="tertiary"/>
+<hr class="tertiary" />
 
 #### Check mandate pre debit notification status
 
@@ -162,19 +196,24 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Path</th>
             <td>
-                <code>/v1/merchants/mandate-pre-debit-notifications/&#123;id&#125;</code>
+                <code>
+                    /v1/merchants/mandate-pre-debit-notifications/&#123;id&#125;
+                </code>
             </td>
         </tr>
         <tr>
             <th>Header</th>
             <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
+                <code>merchantId</code>
+                <br />
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+                &gt;. Generate this token using <a
                     href="/payments/umap/api-integration"
-                    target="_blank">
+                    target="_blank"
+                >
                     OAuth
-                </a>.<br />
+                </a>
+                .<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
@@ -184,7 +223,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 
 <h6>Sample response</h6>
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
   "amount": 1000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "executionDate": "04012006",
@@ -200,10 +239,22 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 </CodeBlockWithCopy>
 <b>In the above response:</b>
 <ul>
-    <li><code>id</code> is a unique ID that is associated with this mandate pre debit notification and can be used to track it later.</li>
+    <li>
+        <code>id</code> is a unique ID that is associated with this mandate pre
+        debit notification and can be used to track it later.
+    </li>
 </ul>
 
-<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandatePreDebitNotificationById" target="_blank">here</a>.</p>
+<p>
+    To know more about all the API params, please refer to the API documentation{" "}
+    <a
+        href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandatePreDebitNotificationById"
+        target="_blank"
+    >
+        here
+    </a>
+    .
+</p>
 
 <NextPage
     info={{
