--- a/content/payments/umap/mandates/single-block-multi-debit.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit.mdx
@@ -7,62 +7,90 @@ visible_in_sidebar: true
 
 ## Single Block Multi Debit Mandates
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates">
-            UPI Autopay Overview ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates">UPI Autopay Overview ↗</a>
 </Card>
 
-<br/>
+<br />
 
 #### What is a Single Block Multi Debit Mandate ?
 
 A single block mutli debit mandate is a mandate that blocks a requested amount of funds in the customer's account and can be executed / debited multiple times against blocked funds.
 
 #### What can I do with a Single Block Multi Debit Mandate ?
-Single block multi debit mandates combines the simplicity of wallets with the convenience of UPI. 
-* Enable try & buy COD orders for your D2C brand, debit only for unreturned apparel
-* Create in-app wallets by blocking funds on customer account and debiting for purchases
-* Power smart margin trading by blocking funds which are released on demand when needed
+
+Single block multi debit mandates combines the simplicity of wallets with the convenience of UPI.
+
+-   Enable try & buy COD orders for your D2C brand, debit only for unreturned apparel
+-   Create in-app wallets by blocking funds on customer account and debiting for purchases
+-   Power smart margin trading by blocking funds which are released on demand when needed
 
 <hr class="primary" />
 
 #### How it works
 
-These are the steps involved in collecting a payment from a customer via an intent based single block multi debit mandate.  
+These are the steps involved in collecting a payment from a customer via an intent based single block multi debit mandate.
 
-<hr class="primary"/>
+<hr class="primary" />
 
 ###### Step 1 - create a single block multi debit mandate
 
 <ol>
-    <li><b>Merchant</b> sends single block multi debit mandate details to <b>UMAP</b> and receives a unique single block multi debit mandate creation intent link / qr to send to their <b>Customer</b>: `TODO: Redirect to intent based single block multi debit mandate creation`</li>
-    <li><b>Customer</b> clicks single block multi debit mandate creation intent link, chooses preferred UPI app / scans the qr on preferred UPI app and enters mPIN to initiate single block multi debit mandate creation.</li>
-    <li><b>UMAP</b> triggers a webhook notification on single block multi debit mandate creation initiation which the merchant can use to update single block multi debit mandate status at their end.</li>
-    <li>Once the mandate is <b>LIVE</b>, <b>UMAP</b> triggers another webhook notification which the merchant can use to mark mandate status as <b>LIVE</b> at their end.</li>
+    <li>
+        <b>Merchant</b> sends single block multi debit mandate details to{" "}
+        <b>UMAP</b> and receives a unique single block multi debit mandate
+        creation intent link / qr to send to their <b>Customer</b>: `TODO:
+        Redirect to intent based single block multi debit mandate creation`
+    </li>
+    <li>
+        <b>Customer</b> clicks single block multi debit mandate creation intent
+        link, chooses preferred UPI app / scans the qr on preferred UPI app and
+        enters mPIN to initiate single block multi debit mandate creation.
+    </li>
+    <li>
+        <b>UMAP</b> triggers a webhook notification on single block multi debit
+        mandate creation initiation which the merchant can use to update single
+        block multi debit mandate status at their end.
+    </li>
+    <li>
+        Once the mandate is <b>LIVE</b>, <b>UMAP</b> triggers another webhook
+        notification which the merchant can use to mark mandate status as{" "}
+        <b>LIVE</b> at their end.
+    </li>
 </ol>
 
-<hr class="tertiary"/>
+<hr class="tertiary" />
 
 ###### Step 2 - trigger mandate execution
 
 <ol>
-    <li>Every time that a payment needs to be collected, the <b>Merchant</b> triggers mandate execution via <b>UMAP</b>.</li>
-    <li><b>Customer</b> receives a collect request notification on their UPI app, clicks on the notification and enters mPIN to authorise the payment.</li>
+    <li>
+        Every time that a payment needs to be collected, the <b>Merchant</b>{" "}
+        triggers mandate execution via <b>UMAP</b>.
+    </li>
+    <li>
+        <b>Customer</b> receives a collect request notification on their UPI
+        app, clicks on the notification and enters mPIN to authorise the
+        payment.
+    </li>
 </ol>
 
-<hr class="tertiary"/>
+<hr class="tertiary" />
 
 ###### Step 3 - check payment status
 
-<p><b>Merchant</b> can use check payment status API to check payment statuses associated to the mandate</p>
+<p>
+    <b>Merchant</b> can use check payment status API to check payment statuses
+    associated to the mandate
+</p>
 
-<hr class="primary"/>
+<hr class="primary" />
 
 Other operations that can be performed on a single block multi debit mandate once it is <b>LIVE</b>
+
 <ul>
     <li>Updating a single block multi debit mandate</li>
     <li>Revoking a single block multi debit mandate</li>
@@ -77,5 +105,3 @@ These have been detailed in the <b>Mandate Operations</b> section within UPI Man
         title: "Create Single Block Multi Debit Mandate",
     }}
 />
-
-
