--- a/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit/execute.mdx
@@ -7,16 +7,16 @@ visible_in_sidebar: true
 
 ## Execute mandate
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates/single-block-multi-debit/create">
-            Create single block multi debit mandate ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates/single-block-multi-debit/create">
+        Create single block multi debit mandate ↗
+    </a>
 </Card>
 
-<br/>
+<br />
 
 Once the mandate is **LIVE**, the merchant can execute the mandate whenever a payment is to be collected from the customer.
 
@@ -41,19 +41,22 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
         <tr>
             <th>Path</th>
             <td>
-                <code>/v1/merchants/mandates/&#123;mandateId&#125;/execute</code>
+                <code>
+                    /v1/merchants/mandates/&#123;mandateId&#125;/execute
+                </code>
             </td>
         </tr>
         <tr>
             <th>Header</th>
             <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/umap/api-integration"
-                    target="_blank">
+                <code>merchantId</code>
+                <br />
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+                &gt;. Generate this token using{" "}
+                <a href="/payments/umap/api-integration" target="_blank">
                     OAuth
-                </a>.<br />
+                </a>
+                .<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
@@ -73,7 +76,9 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
 }`}
 </CodeBlockWithCopy>
 
-<p><b>Request body parameter values for executing a recurring mandate</b></p>
+<p>
+    <b>Request body parameter values for executing a recurring mandate</b>
+</p>
 <table>
     <tr>
         <th>parameter</th>
@@ -81,11 +86,18 @@ The merchant will have to call the **<i>execute mandate API</i>** with the corre
     </tr>
     <tr>
         <td>amount</td>
-        <td>must be such that the cumulative amount debited for the given mandate post current debit is within the amount that is blocked in customer's account</td>
+        <td>
+            must be such that the cumulative amount debited for the given
+            mandate post current debit is within the amount that is blocked in
+            customer's account
+        </td>
     </tr>
     <tr>
         <td>umn</td>
-        <td>can be derived from the notifications received by the merchant during mandate creation flow or via check mandate status API</td>
+        <td>
+            can be derived from the notifications received by the merchant
+            during mandate creation flow or via check mandate status API
+        </td>
     </tr>
 </table>
 
@@ -115,16 +127,30 @@ To know more about all the API params, please refer to the API documentation <a 
 
 <p>UMAP will send notifications to the merchant for the following events:</p>
 <ul>
-    <li><b>mandate_operation.execute.success</b> (if mandate execution is successful)</li>
-    <li><b>mandate_operation.execute.failed</b> (if mandate execution fails)</li>
+    <li>
+        <b>mandate_operation.execute.success</b> (if mandate execution is
+        successful)
+    </li>
+    <li>
+        <b>mandate_operation.execute.failed</b> (if mandate execution fails)
+    </li>
 </ul>
-<p>Read more about mandate execute operation notifications <a href="/payments/umap/notifications/mandates/execute">here</a></p>
+<p>
+    Read more about mandate execute operation notifications{" "}
+    <a href="/payments/umap/notifications/mandates/execute">here</a>
+</p>
 
-<p>In addition to the notifications, the merchant can also use <Link href="/payments/umap/mandates/single-block-multi-debit/execute#check-mandate-execution-status">check mandate execution status API</Link> to check if execution is <b>successful</b></p>
+<p>
+    In addition to the notifications, the merchant can also use{" "}
+    <Link href="/payments/umap/mandates/single-block-multi-debit/execute#check-mandate-execution-status">
+        check mandate execution status API
+    </Link>{" "}
+    to check if execution is <b>successful</b>
+</p>
 
 Please refer to the Document Reference section for checking the API reference and the notifications.
 
-<hr class="tertiary"/>
+<hr class="tertiary" />
 
 #### Check mandate execution status
 
@@ -153,13 +179,14 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
         <tr>
             <th>Header</th>
             <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/umap/api-integration"
-                    target="_blank">
+                <code>merchantId</code>
+                <br />
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+                &gt;. Generate this token using{" "}
+                <a href="/payments/umap/api-integration" target="_blank">
                     OAuth
-                </a>.<br />
+                </a>
+                .<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
@@ -169,7 +196,7 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 
 <h6>Sample response</h6>
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
   "amount": 1000,
   "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
   "id": "01ARZ3NDEKTSV4RRFFQ69G5FAV",
@@ -185,10 +212,22 @@ In addition to the notifications sent by UMAP, Merchant can use this API to chec
 </CodeBlockWithCopy>
 <b>In the above response:</b>
 <ul>
-    <li><code>id</code> is a unique ID that is associated with this mandate execution and can be used to track it later.</li>
+    <li>
+        <code>id</code> is a unique ID that is associated with this mandate
+        execution and can be used to track it later.
+    </li>
 </ul>
 
-<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandateExecutionById" target="_blank">here</a>.</p>
+<p>
+    To know more about all the API params, please refer to the API documentation{" "}
+    <a
+        href="/payments/umap/api-reference#/category~mandates/operation~mandates#fetchMandateExecutionById"
+        target="_blank"
+    >
+        here
+    </a>
+    .
+</p>
 
 <NextPage
     info={{
