--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 <Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
     <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequesites
+        Prerequisites
     </Text>
     <a href="/payments/umap/api-integration/aggregators">
         Aggregator API Integration ↗
@@ -108,7 +108,9 @@ This API can be called to update the information associated with the merchant li
                 <Text size="large" weight="600" textColor="blue-90">
                     Payments
                 </Text>
-                <Text weight="400">Enable UPI payments with QR, Collect & TPV</Text>
+                <Text weight="400">
+                    Enable UPI payments with QR, Collect & TPV
+                </Text>
             </Card>
         </Link>
     </Portion>
@@ -126,7 +128,9 @@ This API can be called to update the information associated with the merchant li
                 <Text size="large" weight="600" textColor="blue-90">
                     Mandates
                 </Text>
-                <Text weight="400">Enable recurring payments with UPI Autopay</Text>
+                <Text weight="400">
+                    Enable recurring payments with UPI Autopay
+                </Text>
             </Card>
         </Link>
     </Portion>
