--- a/content/payments/umap/notifications/disputes.mdx
+++ b/content/payments/umap/notifications/disputes.mdx
@@ -7,41 +7,38 @@ visible_in_sidebar: true
 
 ## Disputes Notifications & Alerts
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/refunds-disputes">
-            Refunds & Disputes ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/refunds-disputes">Refunds & Disputes ↗</a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
 #### Dispute Statuses
 
-`Dispute Open :` A dispute has been created by a customer. 
+`Dispute Open :` A dispute has been created by a customer.
 
-`Dispute Closed :` Merchant accepted dispute and issued a refund. 
+`Dispute Closed :` Merchant accepted dispute and issued a refund.
 
-`Dispute In-Review :` Merchant has contested dispute and has provided evidence. 
+`Dispute In-Review :` Merchant has contested dispute and has provided evidence.
 
-`Dispute Won :` Merchant evidence accepted. No chargeback required. 
+`Dispute Won :` Merchant evidence accepted. No chargeback required.
 
-`Dispute Lost :` Merchant evidence rejected. Chargeback is created. 
-
+`Dispute Lost :` Merchant evidence rejected. Chargeback is created.
 
 The UMAP platform's seamless integration with the UDIR framework ensures that merchants can provide prompt and efficient resolutions to disputes, safeguarding both their interests and those of their customers.
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/dispute-statuses/dispute-statuses.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/dispute-statuses/dispute-statuses.png"
+    alt="Bridge"
 />
 
 ### Dispute Created
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
