--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -7,32 +7,30 @@ visible_in_sidebar: true
 
 ## Mandates Notifications & Alerts
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates">
-            UPI Autopay Overview ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates">UPI Autopay Overview ↗</a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
 ### UPI Mandate Statuses
 
-A UPI mandate will flow through the below statuses throughout its lifecycle  
+A UPI mandate will flow through the below statuses throughout its lifecycle
 
-`Mandate Initiated :` A mandate creation request has been initiated. 
+`Mandate Initiated :` A mandate creation request has been initiated.
 
-`Mandate Live :` Customer authorization received & mandate is now active. 
+`Mandate Live :` Customer authorization received & mandate is now active.
 
-`Mandate Complete :` Mandate executions are done, and now mandate is closed.  
+`Mandate Complete :` Mandate executions are done, and now mandate is closed.
 
-`Mandate Rejected:` Due to error or no authorization, mandate could not be created.   
+`Mandate Rejected:` Due to error or no authorization, mandate could not be created.
 
-`Mandate Paused:` Customer has decided to temporarily stop executions on mandate.   
+`Mandate Paused:` Customer has decided to temporarily stop executions on mandate.
 
-`Mandate Revoked:` Mandate was closed by customer or merchant before expiry. 
+`Mandate Revoked:` Mandate was closed by customer or merchant before expiry.
 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/Frame_109/Frame_109.png"
