--- a/content/payments/umap/notifications/mandates/pause.mdx
+++ b/content/payments/umap/notifications/mandates/pause.mdx
@@ -7,21 +7,19 @@ visible_in_sidebar: true
 
 ## Mandate Pause Operation Notifications & Alerts
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates/generic/pause">
-            UPI Autopay Pause ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates/generic/pause">UPI Autopay Pause ↗</a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
 ### Mandate Pause Initiated
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -45,7 +43,7 @@ visible_in_sidebar: true
 ### Mandate Pause Success
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -69,7 +67,7 @@ visible_in_sidebar: true
 ### Mandate Pause Failed
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
