--- a/content/payments/umap/notifications/mandates/revoke.mdx
+++ b/content/payments/umap/notifications/mandates/revoke.mdx
@@ -7,23 +7,21 @@ visible_in_sidebar: true
 
 ## Mandate Revoke Operation Notifications & Alerts
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates/generic/revoke">
-            UPI Autopay Revoke ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates/generic/revoke">UPI Autopay Revoke ↗</a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
 ### Mandate Revoke Initiated
 
 This notification will be sent only in case the revoke is initiated by the end user.
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -47,7 +45,7 @@ This notification will be sent only in case the revoke is initiated by the end u
 ### Mandate Revoke Success
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -71,7 +69,7 @@ This notification will be sent only in case the revoke is initiated by the end u
 ### Mandate Revoke Failed
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
