--- a/content/payments/umap/notifications/mandates/update.mdx
+++ b/content/payments/umap/notifications/mandates/update.mdx
@@ -7,25 +7,23 @@ visible_in_sidebar: true
 
 ## Mandate Update Operation Notifications & Alerts
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates/generic/update">
-            UPI Autopay Update ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates/generic/update">UPI Autopay Update ↗</a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
-Merchant webhooks for mandates being updated through UMAP. 
+Merchant webhooks for mandates being updated through UMAP.
 
 ### Mandate Update Initiated
 
 This notification will only be triggered in case the mandate is updated via Intent link/QR.
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -54,7 +52,7 @@ This notification will only be triggered in case the mandate is updated via Inte
 This webhook is triggered once UMAP knows the status of the mandate update process.
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -83,7 +81,7 @@ This webhook is triggered once UMAP knows the status of the mandate update proce
 This webhook is triggered once UMAP knows the status of the mandate update process.
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
