--- a/content/payments/umap/notifications/refunds.mdx
+++ b/content/payments/umap/notifications/refunds.mdx
@@ -7,35 +7,35 @@ visible_in_sidebar: true
 
 ## Refunds Notifications & Alerts
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/refunds-disputes">
-            Refunds & Disputes ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/refunds-disputes">Refunds & Disputes ↗</a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
 ### Refund Statuses
 
 UMAP equips merchants with a straightforward, API-based mechanism to process refunds directly to the customer's bank account originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution.
 
 #### Refund Statuses
+
 `Refund Initiated :` Refund request has been create at UMAP<br/><br/>
 `Refund Pending :` Refund is in queue for being processed<br/><br/>
 `Refund Successful :` Refund has been successfully completed<br/><br/>
 `Refund Failed :` Refund could not be processed<br/><br/>
+
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
-  alt="Bridge"
+    src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
+    alt="Bridge"
 />
 
 ### Refund Success
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
@@ -65,7 +65,7 @@ UMAP equips merchants with a straightforward, API-based mechanism to process ref
 ### Refund Failed
 
 <CodeBlockWithCopy language="json">
-{`{
+    {`{
    // Event attributes
    "eventId": "01ARZ3NDEKTSV4RRFFQ69G5FAV", // Id of an event (unique for each event)
    "eventTs": "2023-09-04 12:08:20.202644 +0530 IST", // Timestamp associated with the event
