--- a/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
+++ b/content/payments/umap/refunds-disputes/check-refund-status-api.mdx
@@ -7,18 +7,24 @@ visible_in_sidebar: true
 
 ## Check Refund Status API
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/refunds-disputes/create-refund-api">
-            Create refund ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/refunds-disputes/create-refund-api">
+        Create refund ↗
+    </a>
 </Card>
 
-<hr class="primary"/>
+<hr class="primary" />
 
-<p>The merchant will have to call the <b><i>check refund status API</i></b> with the correct set of parameters.</p>
+<p>
+    The merchant will have to call the{" "}
+    <b>
+        <i>check refund status API</i>
+    </b>{" "}
+    with the correct set of parameters.
+</p>
 
 <table>
     <tbody>
@@ -43,13 +49,14 @@ visible_in_sidebar: true
         <tr>
             <th>Header</th>
             <td>
-                <code>merchantId</code><br/>
-                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                Generate this token using <a
-                    href="/payments/umap/api-integration"
-                    target="_blank">
+                <code>merchantId</code>
+                <br />
+                <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>
+                &gt;. Generate this token using{" "}
+                <a href="/payments/umap/api-integration" target="_blank">
                     OAuth
-                </a>.<br />
+                </a>
+                .<br />
                 <br />
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
@@ -74,7 +81,16 @@ visible_in_sidebar: true
 `}
 </CodeBlockWithCopy>
 
-<p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~refund/operation~refund#fetchById" target="_blank">here</a>.</p>
+<p>
+    To know more about all the API params, please refer to the API documentation{" "}
+    <a
+        href="/payments/umap/api-reference#/category~refund/operation~refund#fetchById"
+        target="_blank"
+    >
+        here
+    </a>
+    .
+</p>
 
 <NextPage
     info={{
