--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 
 <Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
     <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequesites
+        Prerequisites
     </Text>
     <a href="/payments/umap/quickstart/merchants">Merchant Quickstart ↗</a>
 </Card>
