--- a/content/payments/umap/mandates/otm.mdx
+++ b/content/payments/umap/mandates/otm.mdx
@@ -7,116 +7,191 @@ visible_in_sidebar: true
 
 ## One Time Mandates
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates">
-            UPI Autopay Overview ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates">UPI Autopay Overview ↗</a>
 </Card>
 
-<br/>
+<br />
 
 #### What is a One Time Mandate ?
 
-A one time mandate a mandate that can be executed only once at a later date after taking user consent. One time mandates are very useful for conditional flows like:  
-* IPO mandates that are executed only on allotment of shares
-* Transit systems that debit funds only if ticket is confirmed
-* Events platforms can use OTMs for RSVP before confirmations
+A one time mandate a mandate that can be executed only once at a later date after taking user consent. One time mandates are very useful for conditional flows like:
+
+-   IPO mandates that are executed only on allotment of shares
+-   Transit systems that debit funds only if ticket is confirmed
+-   Events platforms can use OTMs for RSVP before confirmations
 
 <hr class="primary" />
 
 #### How it works
 
-The first step to collect a payment via a one time mandate is for the merchant to create a one time mandate. There are 2 ways in which a one time mandate can be created:  
+The first step to collect a payment via a one time mandate is for the merchant to create a one time mandate. There are 2 ways in which a one time mandate can be created:
 
-**Intent based :** Intent based mandates are always initiated by user through merchant app or by scanning a QR code. 
+**Intent based :** Intent based mandates are always initiated by user through merchant app or by scanning a QR code.
 
-**Collect based** Collect based mandates are initated by merchant by taking user's VPA as an input and creating a request.  
+**Collect based** Collect based mandates are initated by merchant by taking user's VPA as an input and creating a request.
 
 <Tabs
-  tabs={[
-    {
-      key: "tab1",
-      label: "Intent based",
-      content: (
-        <Text>
-            These are the list of steps involved in collecting a payment from a customer using a one time mandate in intent flow<br/>
-            {" "}<br/>
-            <hr class="primary"/>
-            <h6>Step 1 - create a one time mandate</h6>
-            <ol>
-                <li><b>Merchant</b> sends one time mandate details to <b>UMAP</b> and receives a unique one time mandate creation intent link / qr to send to their <b>Customer</b></li>
-                <li><b>Customer</b> clicks one time mandate creation intent link, chooses preferred UPI app / scans the qr on preferred UPI app and enters mPIN to initiate one time mandate creation.</li>
-                <li><b>UMAP</b> triggers a webhook notification on one time mandate creation initiation which the merchant can use to update one time mandate status at their end.</li>
-                <li>Once the mandate is <b>LIVE</b>, <b>UMAP</b> triggers another webhook notification which the merchant can use to mark mandate status as <b>LIVE</b> at their end.</li>
-            </ol>
-            <hr class="tertiary"/>
-            <h6>Step 2 - send a pre debit notification</h6>
-            <p><b>Merchant</b> triggers a pre debit notification via UMAP <b>48 - 72 Hrs before</b> debit / execution to let the <b>Customer</b> get notified about the upcoming debit.</p>
-            <hr class="tertiary"/>
-            <h6>Step 3 - trigger mandate execution</h6>
-            <ol>
-                <Callout type='tip'>Customer only has to provide authorization if amount exceeds ₹15,000</Callout>. 
-                
-                <li>48 - 72 Hrs after the pre debit notification is successful, <b>Merchant</b> triggers mandate execution via <b>UMAP</b>.</li>
-                <li><b>Customer</b> receives a collect request notification on their UPI app, clicks on the notification and enters mPIN to authorise the payment.</li>
-            </ol>
-            <hr class="tertiary"/>
-            <h6>Step 4 - check payment status</h6>
-            <p><b>Merchant</b> can use check payment status API to check payment statuses associated to the mandate</p>
-            <hr class = "primary"/>
-            Other operations that can happen on a one time mandate once it is <b>LIVE</b>
-            <ul>
-                <li>Updating a one time mandate</li>
-                <li>Revoking a one time mandate</li>
-                <li>Pausing a one time mandate</li>
-                <li>Unpausing a paused one time mandate</li>
-            </ul>
-            These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
-        </Text>
-        ),
-    },
-    {
-      key: "tab2",
-      label: "Collect based",
-      content: (
-        <Text>
-            These are the list of steps involved in collecting a payment from a customer using a one time mandate in intent flow<br/>
-            {" "}<br/>
-            <hr class="primary"/>
-            <h6>Step 1 - create a one time mandate</h6>
-            <ol>
-                <li><b>Merchant</b> sends one time mandate details to <b>UMAP</b> and the <b>Customer</b> receives a one time mandate creation notification on their UPI app</li>
-                <li><b>Customer</b> clicks one time mandate creation notification, and enters mPIN to initiate one time mandate creation.</li>
-                <li>Once the one time mandate is <b>LIVE</b>, <b>UMAP</b> triggers a webhook notification which the merchant can use to mark one time mandate status as <b>LIVE</b> at their end.</li>
-            </ol>
-            <hr class="tertiary"/>
-            <h6>Step 2 - send a pre debit notification</h6>
-            <p><b>Merchant</b> triggers a pre debit notification via <b>UMAP</b> 48 - 72 Hrs before debit / execution to let the <b>Customer</b> get notified about the upcoming debit.</p>
-            <hr class="tertiary"/>
-            <h6>Step 3 - trigger mandate execution</h6>
-            <ol>
-                <li>48 - 72 Hrs after the pre debit notification is successful, <b>Merchant</b> triggers mandate execution via <b>UMAP</b>.</li>
-                <li><b>Customer</b> receives a collect request notification on their UPI app, clicks on the notification and enters mPIN to authorise the payment.</li>
-            </ol>
-            <hr class="tertiary"/>
-            <h6>Step 4 - check payment status</h6>
-            <p><b>Merchant</b> can use check payment status API to check payment statuses associated to the mandate</p>
-            <hr class = "primary"/>
-            Other operations that can be performed on a one time mandate once it is <b>LIVE</b>
-            <ul>
-                <li>Updating a one time mandate</li>
-                <li>Revoking a one time mandate</li>
-                <li>Pausing a one time mandate</li>
-                <li>Unpausing a paused one time mandate</li>
-            </ul>
-            These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
-        </Text>
-        ),
-    },
-  ]}
+    tabs={[
+        {
+            key: "tab1",
+            label: "Intent based",
+            content: (
+                <Text>
+                    These are the list of steps involved in collecting a payment
+                    from a customer using a one time mandate in intent flow
+                    <br /> <br />
+                    <hr class="primary" />
+                    <h6>Step 1 - create a one time mandate</h6>
+                    <ol>
+                        <li>
+                            <b>Merchant</b> sends one time mandate details to{" "}
+                            <b>UMAP</b> and receives a unique one time mandate
+                            creation intent link / qr to send to their{" "}
+                            <b>Customer</b>
+                        </li>
+                        <li>
+                            <b>Customer</b> clicks one time mandate creation
+                            intent link, chooses preferred UPI app / scans the
+                            qr on preferred UPI app and enters mPIN to initiate
+                            one time mandate creation.
+                        </li>
+                        <li>
+                            <b>UMAP</b> triggers a webhook notification on one
+                            time mandate creation initiation which the merchant
+                            can use to update one time mandate status at their
+                            end.
+                        </li>
+                        <li>
+                            Once the mandate is <b>LIVE</b>, <b>UMAP</b>{" "}
+                            triggers another webhook notification which the
+                            merchant can use to mark mandate status as{" "}
+                            <b>LIVE</b> at their end.
+                        </li>
+                    </ol>
+                    <hr class="tertiary" />
+                    <h6>Step 2 - send a pre debit notification</h6>
+                    <p>
+                        <b>Merchant</b> triggers a pre debit notification via
+                        UMAP <b>48 - 72 Hrs before</b> debit / execution to let
+                        the <b>Customer</b> get notified about the upcoming
+                        debit.
+                    </p>
+                    <hr class="tertiary" />
+                    <h6>Step 3 - trigger mandate execution</h6>
+                    <ol>
+                        <Callout type="tip">
+                            Customer only has to provide authorization if amount
+                            exceeds ₹15,000
+                        </Callout>
+                        .
+                        <li>
+                            48 - 72 Hrs after the pre debit notification is
+                            successful, <b>Merchant</b> triggers mandate
+                            execution via <b>UMAP</b>.
+                        </li>
+                        <li>
+                            <b>Customer</b> receives a collect request
+                            notification on their UPI app, clicks on the
+                            notification and enters mPIN to authorise the
+                            payment.
+                        </li>
+                    </ol>
+                    <hr class="tertiary" />
+                    <h6>Step 4 - check payment status</h6>
+                    <p>
+                        <b>Merchant</b> can use check payment status API to
+                        check payment statuses associated to the mandate
+                    </p>
+                    <hr class="primary" />
+                    Other operations that can happen on a one time mandate once it
+                    is <b>LIVE</b>
+                    <ul>
+                        <li>Updating a one time mandate</li>
+                        <li>Revoking a one time mandate</li>
+                        <li>Pausing a one time mandate</li>
+                        <li>Unpausing a paused one time mandate</li>
+                    </ul>
+                    These have been detailed in the <b>Mandate Operations</b> section
+                    within UPI Mandates
+                </Text>
+            ),
+        },
+        {
+            key: "tab2",
+            label: "Collect based",
+            content: (
+                <Text>
+                    These are the list of steps involved in collecting a payment
+                    from a customer using a one time mandate in intent flow
+                    <br /> <br />
+                    <hr class="primary" />
+                    <h6>Step 1 - create a one time mandate</h6>
+                    <ol>
+                        <li>
+                            <b>Merchant</b> sends one time mandate details to{" "}
+                            <b>UMAP</b> and the <b>Customer</b> receives a one
+                            time mandate creation notification on their UPI app
+                        </li>
+                        <li>
+                            <b>Customer</b> clicks one time mandate creation
+                            notification, and enters mPIN to initiate one time
+                            mandate creation.
+                        </li>
+                        <li>
+                            Once the one time mandate is <b>LIVE</b>,{" "}
+                            <b>UMAP</b> triggers a webhook notification which
+                            the merchant can use to mark one time mandate status
+                            as <b>LIVE</b> at their end.
+                        </li>
+                    </ol>
+                    <hr class="tertiary" />
+                    <h6>Step 2 - send a pre debit notification</h6>
+                    <p>
+                        <b>Merchant</b> triggers a pre debit notification via{" "}
+                        <b>UMAP</b> 48 - 72 Hrs before debit / execution to let
+                        the <b>Customer</b> get notified about the upcoming
+                        debit.
+                    </p>
+                    <hr class="tertiary" />
+                    <h6>Step 3 - trigger mandate execution</h6>
+                    <ol>
+                        <li>
+                            48 - 72 Hrs after the pre debit notification is
+                            successful, <b>Merchant</b> triggers mandate
+                            execution via <b>UMAP</b>.
+                        </li>
+                        <li>
+                            <b>Customer</b> receives a collect request
+                            notification on their UPI app, clicks on the
+                            notification and enters mPIN to authorise the
+                            payment.
+                        </li>
+                    </ol>
+                    <hr class="tertiary" />
+                    <h6>Step 4 - check payment status</h6>
+                    <p>
+                        <b>Merchant</b> can use check payment status API to
+                        check payment statuses associated to the mandate
+                    </p>
+                    <hr class="primary" />
+                    Other operations that can be performed on a one time mandate
+                    once it is <b>LIVE</b>
+                    <ul>
+                        <li>Updating a one time mandate</li>
+                        <li>Revoking a one time mandate</li>
+                        <li>Pausing a one time mandate</li>
+                        <li>Unpausing a paused one time mandate</li>
+                    </ul>
+                    These have been detailed in the <b>Mandate Operations</b> section
+                    within UPI Mandates
+                </Text>
+            ),
+        },
+    ]}
 />
 
 <NextPage
@@ -126,6 +201,3 @@ The first step to collect a payment via a one time mandate is for the merchant t
         title: "Create One Time Mandate",
     }}
 />
-
-
-
