--- a/content/payments/umap/mandates/recurring.mdx
+++ b/content/payments/umap/mandates/recurring.mdx
@@ -7,128 +7,224 @@ visible_in_sidebar: true
 
 ## Recurring Mandates
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates">
-            UPI Autopay Overview ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates">UPI Autopay Overview ↗</a>
 </Card>
 
-<br/>
+<br />
 
 #### What is a Recurring Mandate ?
 
 A recurring mandate is a mandate that that can be executed / debited multiple times as per the recurrence pattern configured / agreed upon during mandate creation.
 
-#### What can I do with a Recurring Mandate ?  
+#### What can I do with a Recurring Mandate ?
+
 Recurring mandates help merchants seamless collect money multiple times with a single setup.
-* Create subscriptions for your streaming services & SAAS businesses
-* Automate memberships to your physical venues with automatic payments
-* Power daily savings/investment related features for your customers
+
+-   Create subscriptions for your streaming services & SAAS businesses
+-   Automate memberships to your physical venues with automatic payments
+-   Power daily savings/investment related features for your customers
 
 <hr class="primary" />
 
 #### How it works
 
 The first step to collect a payment via a recurring mandate is for the **Merchant** to create a recurring mandate. There are 2 ways in which a recurring mandate can be created:<br/><br/>
-**Intent based :** Intent based mandates are always initiated by user through merchant app or by scanning a QR code. 
+**Intent based :** Intent based mandates are always initiated by user through merchant app or by scanning a QR code.
 
 **Collect based** Collect based mandates are initated by merchant by taking user's VPA as an input and creating a request.
 
 <Tabs
-  tabs={[
-    {
-      key: "tab1",
-      label: "Intent based",
-      content: (
-        <Text>
-            These are the list of steps involved in collecting a payment from a customer using a recurring mandate in intent flow.<br/>
-            {" "}<br/>
-            <hr class="primary"/>
-            <h6>Step 1 - create a recurring mandate</h6>
-            <ol>
-                <li><b>Merchant</b> sends recurring mandate details to <b>UMAP</b> and receives a unique recurring mandate creation intent link / qr to send to their <b>Customer</b>: `TODO: Redirect to intent based recurring mandate creation`</li>
-                <li><b>Customer</b> clicks recurring mandate creation intent link, chooses preferred UPI app / scans the qr on preferred UPI app and enters mPIN to initiate recurring mandate creation.</li>
-                <li><b>UMAP</b> triggers a webhook notification on recurring mandate creation initiation which the merchant can use to update recurring mandate status at their end.</li>
-                <li>Once the mandate is <b>LIVE</b>, <b>UMAP</b> triggers another webhook notification which the merchant can use to mark mandate status as <b>LIVE</b> at their end.</li>
-            </ol>
-            <hr class="tertiary"/>
-            <h6>Step 2 - send a pre debit notification</h6>
-            <p>In every recurrence cycle, <b>Merchant</b> triggers a pre debit notification via <b>UMAP</b> 48 - 72 Hrs before debit / execution to let the <b>Customer</b> get notified about the upcoming debit.</p>
-            <Callout type="tip">
-                No merchant intervention is needed for recurring pre debit notifications and executions if <code>auto pre debit notification</code> and <code>auto execution</code> are configured while creating a recurring mandate.
-            </Callout>
-            <hr class="tertiary"/>
-            <h6>Step 3 - trigger mandate execution</h6>
-            <ol>
-                <li>48 - 72 Hrs after the pre debit notification is successful, <b>Merchant</b> triggers mandate execution via <b>UMAP</b>.</li>
-                <li><b>Customer</b> receives a collect request notification on their UPI app, clicks on the notification and enters mPIN to authorise the payment.</li>
-            </ol>
-            <Callout type="tip">
-                No merchant intervention is needed for recurring pre debit notifications and executions if <code>auto pre debit notification</code> and <code>auto execution</code> are configured while creating a recurring mandate.
-            </Callout>
-            <hr class="tertiary"/>
-            <h6>Step 4 - check payment status</h6>
-            <p><b>Merchant</b> can use check payment status API to check payment statuses associated to the mandate</p>
-            <hr class = "primary"/>
-            Other operations that can be performed on a recurring mandate once it is <b>LIVE</b>
-            <ul>
-                <li>Updating a recurring mandate</li>
-                <li>Revoking a recurring mandate</li>
-                <li>Pausing a recurring mandate</li>
-                <li>Unpausing a paused recurring mandate</li>
-            </ul>
-            These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
-        </Text>
-        ),
-    },
-    {
-      key: "tab2",
-      label: "Collect based",
-      content: (
-        <Text>
-            Here is a typical list of steps involved in collecting a payment from a customer via a collect based recurring mandate. Let’s use the example of `TODO: mention recurring mandate use case`. In this scenario, the lender (`TODO: replace 'lender' based on use case mentioned`) is the Merchant partner that has integrated with Setu.<br/>
-            {" "}<br/>
-            <hr class="primary"/>
-            <h6>Step 1 - create a recurring mandate</h6>
-            <ol>
-                <li><b>Merchant</b> sends recurring mandate details to <b>UMAP</b> and the <b>Customer</b> receives a recurring mandate creation notification on their UPI app: `TODO: Redirect to intent based recurring mandate creation`</li>
-                <li><b>Customer</b> clicks recurring mandate creation notification, and enters mPIN to initiate recurring mandate creation.</li>
-                <li>Once the recurring mandate is <b>LIVE</b>, <b>UMAP</b> triggers a webhook notification which the merchant can use to mark recurring mandate status as <b>LIVE</b> at their end.</li>
-            </ol>
-            <hr class="tertiary"/>
-            <h6>Step 2 - send a pre debit notification</h6>
-            <p>In every recurrence cycle, <b>Merchant</b> triggers a pre debit notification via <b>UMAP</b> 48 - 72 Hrs before debit / execution to let the <b>Customer</b> get notified about the upcoming debit.</p>
-            <Callout type="tip">
-                No merchant intervention is needed for recurring pre debit notifications and executions if <code>auto pre debit notification</code> and <code>auto execution</code> are configured while creating a recurring mandate.
-            </Callout>
-            <hr class="tertiary"/>
-            <h6>Step 3 - trigger mandate execution</h6>
-            <ol>
-                <li>48 - 72 Hrs after the pre debit notification is successful, <b>Merchant</b> triggers mandate execution via <b>UMAP</b>.</li>
-                <li><b>Customer</b> receives a collect request notification on their UPI app, clicks on the notification and enters mPIN to authorise the payment.</li>
-            </ol>
-            <Callout type="tip">
-                No merchant intervention is needed for recurring pre debit notifications and executions if <code>auto pre debit notification</code> and <code>auto execution</code> are configured while creating a recurring mandate.
-            </Callout>
-            <hr class="tertiary"/>
-            <h6>Step 4 - check payment status</h6>
-            <p><b>Merchant</b> can use check payment status API to check payment statuses associated to the mandate</p>
-            <hr class = "primary"/>
-            Other operations that can be performed on a recurring mandate once it is <b>LIVE</b>
-            <ul>
-                <li>Updating a recurring mandate</li>
-                <li>Revoking a recurring mandate</li>
-                <li>Pausing a recurring mandate</li>
-                <li>Unpausing a paused recurring mandate</li>
-            </ul>
-            These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
-        </Text>
-        ),
-    },
-  ]}
+    tabs={[
+        {
+            key: "tab1",
+            label: "Intent based",
+            content: (
+                <Text>
+                    These are the list of steps involved in collecting a payment
+                    from a customer using a recurring mandate in intent flow.
+                    <br /> <br />
+                    <hr class="primary" />
+                    <h6>Step 1 - create a recurring mandate</h6>
+                    <ol>
+                        <li>
+                            <b>Merchant</b> sends recurring mandate details to{" "}
+                            <b>UMAP</b> and receives a unique recurring mandate
+                            creation intent link / qr to send to their{" "}
+                            <b>Customer</b>: `TODO: Redirect to intent based
+                            recurring mandate creation`
+                        </li>
+                        <li>
+                            <b>Customer</b> clicks recurring mandate creation
+                            intent link, chooses preferred UPI app / scans the
+                            qr on preferred UPI app and enters mPIN to initiate
+                            recurring mandate creation.
+                        </li>
+                        <li>
+                            <b>UMAP</b> triggers a webhook notification on
+                            recurring mandate creation initiation which the
+                            merchant can use to update recurring mandate status
+                            at their end.
+                        </li>
+                        <li>
+                            Once the mandate is <b>LIVE</b>, <b>UMAP</b>{" "}
+                            triggers another webhook notification which the
+                            merchant can use to mark mandate status as{" "}
+                            <b>LIVE</b> at their end.
+                        </li>
+                    </ol>
+                    <hr class="tertiary" />
+                    <h6>Step 2 - send a pre debit notification</h6>
+                    <p>
+                        In every recurrence cycle, <b>Merchant</b> triggers a
+                        pre debit notification via <b>UMAP</b> 48 - 72 Hrs
+                        before debit / execution to let the <b>Customer</b> get
+                        notified about the upcoming debit.
+                    </p>
+                    <Callout type="tip">
+                        No merchant intervention is needed for recurring pre
+                        debit notifications and executions if{" "}
+                        <code>auto pre debit notification</code> and{" "}
+                        <code>auto execution</code> are configured while
+                        creating a recurring mandate.
+                    </Callout>
+                    <hr class="tertiary" />
+                    <h6>Step 3 - trigger mandate execution</h6>
+                    <ol>
+                        <li>
+                            48 - 72 Hrs after the pre debit notification is
+                            successful, <b>Merchant</b> triggers mandate
+                            execution via <b>UMAP</b>.
+                        </li>
+                        <li>
+                            <b>Customer</b> receives a collect request
+                            notification on their UPI app, clicks on the
+                            notification and enters mPIN to authorise the
+                            payment.
+                        </li>
+                    </ol>
+                    <Callout type="tip">
+                        No merchant intervention is needed for recurring pre
+                        debit notifications and executions if{" "}
+                        <code>auto pre debit notification</code> and{" "}
+                        <code>auto execution</code> are configured while
+                        creating a recurring mandate.
+                    </Callout>
+                    <hr class="tertiary" />
+                    <h6>Step 4 - check payment status</h6>
+                    <p>
+                        <b>Merchant</b> can use check payment status API to
+                        check payment statuses associated to the mandate
+                    </p>
+                    <hr class="primary" />
+                    Other operations that can be performed on a recurring mandate
+                    once it is <b>LIVE</b>
+                    <ul>
+                        <li>Updating a recurring mandate</li>
+                        <li>Revoking a recurring mandate</li>
+                        <li>Pausing a recurring mandate</li>
+                        <li>Unpausing a paused recurring mandate</li>
+                    </ul>
+                    These have been detailed in the <b>Mandate Operations</b> section
+                    within UPI Mandates
+                </Text>
+            ),
+        },
+        {
+            key: "tab2",
+            label: "Collect based",
+            content: (
+                <Text>
+                    Here is a typical list of steps involved in collecting a
+                    payment from a customer via a collect based recurring
+                    mandate. Let’s use the example of `TODO: mention recurring
+                    mandate use case`. In this scenario, the lender (`TODO:
+                    replace 'lender' based on use case mentioned`) is the
+                    Merchant partner that has integrated with Setu.
+                    <br /> <br />
+                    <hr class="primary" />
+                    <h6>Step 1 - create a recurring mandate</h6>
+                    <ol>
+                        <li>
+                            <b>Merchant</b> sends recurring mandate details to{" "}
+                            <b>UMAP</b> and the <b>Customer</b> receives a
+                            recurring mandate creation notification on their UPI
+                            app: `TODO: Redirect to intent based recurring
+                            mandate creation`
+                        </li>
+                        <li>
+                            <b>Customer</b> clicks recurring mandate creation
+                            notification, and enters mPIN to initiate recurring
+                            mandate creation.
+                        </li>
+                        <li>
+                            Once the recurring mandate is <b>LIVE</b>,{" "}
+                            <b>UMAP</b> triggers a webhook notification which
+                            the merchant can use to mark recurring mandate
+                            status as <b>LIVE</b> at their end.
+                        </li>
+                    </ol>
+                    <hr class="tertiary" />
+                    <h6>Step 2 - send a pre debit notification</h6>
+                    <p>
+                        In every recurrence cycle, <b>Merchant</b> triggers a
+                        pre debit notification via <b>UMAP</b> 48 - 72 Hrs
+                        before debit / execution to let the <b>Customer</b> get
+                        notified about the upcoming debit.
+                    </p>
+                    <Callout type="tip">
+                        No merchant intervention is needed for recurring pre
+                        debit notifications and executions if{" "}
+                        <code>auto pre debit notification</code> and{" "}
+                        <code>auto execution</code> are configured while
+                        creating a recurring mandate.
+                    </Callout>
+                    <hr class="tertiary" />
+                    <h6>Step 3 - trigger mandate execution</h6>
+                    <ol>
+                        <li>
+                            48 - 72 Hrs after the pre debit notification is
+                            successful, <b>Merchant</b> triggers mandate
+                            execution via <b>UMAP</b>.
+                        </li>
+                        <li>
+                            <b>Customer</b> receives a collect request
+                            notification on their UPI app, clicks on the
+                            notification and enters mPIN to authorise the
+                            payment.
+                        </li>
+                    </ol>
+                    <Callout type="tip">
+                        No merchant intervention is needed for recurring pre
+                        debit notifications and executions if{" "}
+                        <code>auto pre debit notification</code> and{" "}
+                        <code>auto execution</code> are configured while
+                        creating a recurring mandate.
+                    </Callout>
+                    <hr class="tertiary" />
+                    <h6>Step 4 - check payment status</h6>
+                    <p>
+                        <b>Merchant</b> can use check payment status API to
+                        check payment statuses associated to the mandate
+                    </p>
+                    <hr class="primary" />
+                    Other operations that can be performed on a recurring mandate
+                    once it is <b>LIVE</b>
+                    <ul>
+                        <li>Updating a recurring mandate</li>
+                        <li>Revoking a recurring mandate</li>
+                        <li>Pausing a recurring mandate</li>
+                        <li>Unpausing a paused recurring mandate</li>
+                    </ul>
+                    These have been detailed in the <b>Mandate Operations</b> section
+                    within UPI Mandates
+                </Text>
+            ),
+        },
+    ]}
 />
 
 <NextPage
@@ -138,6 +234,3 @@ The first step to collect a payment via a recurring mandate is for the **Merchan
         title: "Create Recurring Mandate",
     }}
 />
-
-
-
