--- a/content/payments/umap/mandates/recurring/check-status.mdx
+++ b/content/payments/umap/mandates/recurring/check-status.mdx
@@ -7,16 +7,14 @@ visible_in_sidebar: true
 
 ## Check mandate payment status
 
-<Card padding="nano" shape="rounded" marginBottom="micro">
-    <Text size="medium" marginBottom="none" paddingRight="medium">
-        <strong>Prerequisites - </strong>
-        <Link href="/payments/umap/mandates/recurring/execute">
-            Execute Mandate ↗
-        </Link>
+<Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
+    <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
+        Prerequisites
     </Text>
+    <a href="/payments/umap/mandates/recurring/execute">Execute Mandate ↗</a>
 </Card>
 
-<br/>
+<br />
 
 A recurring mandate can have multiple payments associated to it.
 
@@ -24,51 +22,61 @@ The merchant can use **<i>check status API</i>** to check payment status of the 
 and **<i>check status history API</i>** to payment status of the last 5 payments associated to the mandate
 
 <Tabs
-  tabs={[
-    {
-      key: "tab1",
-      label: "Check status",
-      content: (
-        <Text>
-            <table>
-                <tbody>
-                    <tr>
-                        <th>Staging Host</th>
-                        <td>
-                            <code>https://umap-dev-core.setu.co/api</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Method</th>
-                        <td>
-                            <code>GET</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Path</th>
-                        <td>
-                            <code>/v1/merchants/payments/product-instances/&#123;mandateId&#125;/last</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Header</th>
-                        <td>
-                            <code>merchantId</code><br/>
-                            <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                            Generate this token using <a
-                                href="/payments/umap/api-integration"
-                                target="_blank">
-                                OAuth
-                            </a>.<br />
-                            <br />
-                            <code>Content-Type</code>—will be <code>application/json</code>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <h6>Sample response</h6>
-            <CodeBlockWithCopy language="json">
-                {`{
+    tabs={[
+        {
+            key: "tab1",
+            label: "Check status",
+            content: (
+                <Text>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <th>Staging Host</th>
+                                <td>
+                                    <code>
+                                        https://umap-dev-core.setu.co/api
+                                    </code>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Method</th>
+                                <td>
+                                    <code>GET</code>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Path</th>
+                                <td>
+                                    <code>
+                                        /v1/merchants/payments/product-instances/&#123;mandateId&#125;/last
+                                    </code>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Header</th>
+                                <td>
+                                    <code>merchantId</code>
+                                    <br />
+                                    <code>Authorization</code>: Bearer &lt;
+                                    <b>insert_token_here</b>&gt;. Generate this
+                                    token using{" "}
+                                    <a
+                                        href="/payments/umap/api-integration"
+                                        target="_blank"
+                                    >
+                                        OAuth
+                                    </a>
+                                    .<br />
+                                    <br />
+                                    <code>Content-Type</code>—will be{" "}
+                                    <code>application/json</code>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <h6>Sample response</h6>
+                    <CodeBlockWithCopy language="json">
+                        {`{
     "amount": 10000,
     "createdAt": "2023-09-04 12:08:20.202644 +0530 IST",
     "currency": "INR",
@@ -85,59 +93,83 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
     "txnId": "SETmBZkQOV0M7wyyP1V4PIFhRSzW5eSjmYI",
     "txnNote": "testpay"
 }`}
-            </CodeBlockWithCopy>
-            <b>In the above response:</b>
-            <ul>
-                <li><code>id</code> is a unique ID that is associated with this mandate payment and can be used to track it later.</li>
-            </ul>
-            <p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId" target="_blank">here</a>.</p>
-        </Text>
-        ),
-    },
-    {
-      key: "tab2",
-      label: "Check status history",
-      content: (
-        <Text>
-            <table>
-                <tbody>
-                    <tr>
-                        <th>Staging Host</th>
-                        <td>
-                            <code>https://umap-dev-core.setu.co/api</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Method</th>
-                        <td>
-                            <code>GET</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Path</th>
-                        <td>
-                            <code>/v1/merchants/payments/product-instances/&#123;mandateId&#125;/history</code>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>Header</th>
-                        <td>
-                            <code>merchantId</code><br/>
-                            <code>Authorization</code>: Bearer &lt;<b>insert_token_here</b>&gt;.
-                            Generate this token using <a
-                                href="/payments/umap/api-integration"
-                                target="_blank">
-                                OAuth
-                            </a>.<br />
-                            <br />
-                            <code>Content-Type</code>—will be <code>application/json</code>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <h6>Sample response</h6>
-            <CodeBlockWithCopy language="json">
-                {`{
+                    </CodeBlockWithCopy>
+                    <b>In the above response:</b>
+                    <ul>
+                        <li>
+                            <code>id</code> is a unique ID that is associated
+                            with this mandate payment and can be used to track
+                            it later.
+                        </li>
+                    </ul>
+                    <p>
+                        To know more about all the API params, please refer to
+                        the API documentation{" "}
+                        <a
+                            href="/payments/umap/api-reference#/category~payments/operation~payments#fetchLastByProductInstanceId"
+                            target="_blank"
+                        >
+                            here
+                        </a>
+                        .
+                    </p>
+                </Text>
+            ),
+        },
+        {
+            key: "tab2",
+            label: "Check status history",
+            content: (
+                <Text>
+                    <table>
+                        <tbody>
+                            <tr>
+                                <th>Staging Host</th>
+                                <td>
+                                    <code>
+                                        https://umap-dev-core.setu.co/api
+                                    </code>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Method</th>
+                                <td>
+                                    <code>GET</code>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Path</th>
+                                <td>
+                                    <code>
+                                        /v1/merchants/payments/product-instances/&#123;mandateId&#125;/history
+                                    </code>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th>Header</th>
+                                <td>
+                                    <code>merchantId</code>
+                                    <br />
+                                    <code>Authorization</code>: Bearer &lt;
+                                    <b>insert_token_here</b>&gt;. Generate this
+                                    token using{" "}
+                                    <a
+                                        href="/payments/umap/api-integration"
+                                        target="_blank"
+                                    >
+                                        OAuth
+                                    </a>
+                                    .<br />
+                                    <br />
+                                    <code>Content-Type</code>—will be{" "}
+                                    <code>application/json</code>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <h6>Sample response</h6>
+                    <CodeBlockWithCopy language="json">
+                        {`{
   "payments": [
     {
       "amount": 10000,
@@ -177,15 +209,23 @@ and **<i>check status history API</i>** to payment status of the last 5 payments
     }
   ]
 }`}
-            </CodeBlockWithCopy>
-            <p>To know more about all the API params, please refer to the API documentation <a href="/payments/umap/api-reference#/category~payments/operation~payments#fetchHistoryByProductInstanceId" target="_blank">here</a>.</p>
-        </Text>
-      ),
-    },
-  ]}
+                    </CodeBlockWithCopy>
+                    <p>
+                        To know more about all the API params, please refer to
+                        the API documentation{" "}
+                        <a
+                            href="/payments/umap/api-reference#/category~payments/operation~payments#fetchHistoryByProductInstanceId"
+                            target="_blank"
+                        >
+                            here
+                        </a>
+                        .
+                    </p>
+                </Text>
+            ),
+        },
+    ]}
 />
-
-
 
 <NextPage
     info={{
