--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -9,11 +9,9 @@ visible_in_sidebar: true
 
 <Card padding="nano" shape="rounded" marginBottom="micro" marginTop="micro">
     <Text size="medium" marginBottom="nano" paddingRight="medium" weight="600">
-        Prerequesites
+        Prerequisites
     </Text>
-    <Link href="/payments/umap/quickstart">
-        Quickstart ↗ 
-    </Link>
+    <Link href="/payments/umap/quickstart">Quickstart ↗</Link>
 </Card>
 
 <hr class="primary" />
